trying to fix server